Fixed spacing of icons for different viewports

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body > * {
     font-family: “Century Gothic”, CenturyGothic, AppleGothic, sans-serif;
 }
+
 #glass-back {
     background-image: url("../img/forest_blur.png");
     background-position: center;
@@ -25,7 +26,7 @@ body > * {
     background: linear-gradient(135deg, rgba(34,34,34,0.8) 0%, rgba(0,0,0,0.8) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222222', endColorstr='#000000', GradientType=1 );
 
-    padding-top: 10%;
+    padding-top: 5%;
 }
 
 
@@ -47,7 +48,7 @@ body > * {
 #project-holder {
     width: 80%;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 50px;
     color: white;
 }
 
@@ -60,6 +61,19 @@ body > * {
 #project-holder > div {
     height: 80px;
 }
+
+@media only screen and (min-width: 768px) {
+    .project {
+        margin-top: 50px;
+    }
+}
+
+@media only screen and (min-width: 1367px) {
+    .project {
+        margin-top: 100px;
+    }
+}
+
 
 .project-icon {
     height: 80px;
